XSS 방지 로직 관련 Log 추적 중지

--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -24,6 +24,11 @@ spring:
     username: ${REDIS_USERNAME}
     password: ${REDIS_PWD}
 
+# logging
+logging:
+  level:
+    org.owasp.validator: off
+
 # security 설정
   security:
     oauth2:
